--- a/aws-android-sdk-testutils/src/main/res/raw/testconfiguration.json
+++ b/aws-android-sdk-testutils/src/main/res/raw/testconfiguration.json
@@ -1,6 +1,6 @@
 {
   "Credentials" :{
-    "accessKey":"REPLACE-ME",
+    "accessKey":REPLACE-ME",
     "secretKey":"REPLACE-ME",
     "accountId":"REPLACE-ME"
   },
