--- a/aws-android-sdk-kinesisvideo/src/main/AndroidManifest.xml
+++ b/aws-android-sdk-kinesisvideo/src/main/AndroidManifest.xml
@@ -7,5 +7,5 @@
     <uses-permission android:name="android.permission.INTERNET"/>
     <application>
     </application>
-<uses-sdk android:minSdkVersion="21" android:targetSdkVersion="25" /></manifest>
+</manifest>
 
