--- a/aws-android-sdk-core/build.gradle
+++ b/aws-android-sdk-core/build.gradle
@@ -1,10 +1,11 @@
 apply plugin: 'java-library'
 
 dependencies {
-    compileOnly fileTree(dir: 'libs', include: ['*.jar'])
+    compileOnly fileTree(dir: 'libs', include: ['*.jar','*.aar'])
 
     api "com.google.code.gson:gson:2.2.4"
     api "com.google.android:android:2.3.3"
+    api group: 'com.android', name: 'common', version: 'r16'
     implementation "com.fasterxml.jackson.core:jackson-core:2.1.1"
 
     testImplementation "junit:junit:4.12"
